# shipmate

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRACT.md  CONTRIBUTING.md  LEDGER.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: apply-all.yml  apply-env-level.yml  apply.yml  ci.yml  deploy.yml  internal-pins.yml
actions/apply-all-detect/: action.yml
actions/apply-cell/: action.yml
actions/apply-detect/: action.yml
actions/build-matrix/: action.yml
actions/checkmate-refresh/: action.yml
actions/comment-ops/: action.yml
actions/deploy-detect/: action.yml
actions/dispatch/: action.yml
actions/drift-cell/: action.yml
actions/gate-refresh/: action.yml
actions/plan-cell/: action.yml
actions/setup/: action.yml
actions/state/: README.md  action.yml
actions/summary/: action.yml
app/: manifest.json
docs/: branch-protection.md  github-app.md  releasing.md
scripts/: apply-all-detect  apply-detect  apply-gate  authorize  build-matrix  comment-parse  deploy-detect  doctor  env-order  pending-checks  plan-classify  plan-crypt  register-app  summary-comment  waves
scripts/tests/: test_actions_shellcheck.py  test_apply_all_detect.py  test_apply_cell_state_save.py  test_apply_detect.py  test_apply_gate.py  test_authorize.py  test_build_matrix.py  test_check_runs_filter_aligned.py  test_comment_parse.py  test_deploy_detect.py  test_doctor.py  test_env_order.py  test_gate_name_consistency.py  test_internal_pins.py  test_pending_checks.py  test_plan_classify.py  test_plan_crypt.py  test_register_app.py  test_safeguards.py  test_summary_comment.py  test_waves.py
(+1 files in other folders)
